--- a/filling-in-ones-shoes.html
+++ b/filling-in-ones-shoes.html
@@ -114,7 +114,7 @@
 </head>
 <body>
     <div class="container">
-        <a href="writings.html" class="back-link">writings</a>
+        <a href="index.html" class="back-link">writings</a>
         
         <article>
             <h1>filling in one's shoes</h1>
