--- a/when-breath-becomes-air.html
+++ b/when-breath-becomes-air.html
@@ -114,7 +114,7 @@
 </head>
 <body>
     <div class="container">
-        <a href="writings.html" class="back-link">writings</a>
+        <a href="index.html" class="back-link">writings</a>
         
         <article>
             <h1>book review: when breath becomes air</h1>
